<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">


    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        app:tint = "#6B7280"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/txDangNhap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    nhập email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/txDangNhap">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>
<!--    password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--    Button đăng nhập-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:backgroundTint="#4F6EF7"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#E5E7EB"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hoặc"
            android:textColor="@color/black"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            android:layout_gravity="center"


            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#E5E7EB"
            android:layout_weight="1"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:text="Tiếp tục với Google"
        app:cornerRadius="26dp"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        android:textColor="#000000"
        app:strokeColor="#DADCE0"
        app:strokeWidth="1dp"
        app:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="26dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApple"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="Tiếp tục với Apple"
        app:cornerRadius="26dp"
        app:icon="@drawable/ic_apple"
        app:iconTint="@null"
        android:textColor="#000000"
        app:strokeColor="#DADCE0"
        app:strokeWidth="1dp"
        app:backgroundTint="@android:color/white"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="Tiếp tục với Facebook"
        app:cornerRadius="26dp"
        app:icon="@drawable/ic_facebook"
        app:iconTint="@null"
        android:textColor="#000000"
        app:strokeColor="#DADCE0"
        app:strokeWidth="1dp"

        app:backgroundTint="@android:color/white"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnApple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/llSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chưa có tài khoản? "
            android:textColor="#6B7280"/>

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký ngay"
            android:textStyle="bold"
            android:textColor="#4F6EF7"/>
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>